nuxt router and layout, head

--- a/memo/2019.08.18.md
+++ b/memo/2019.08.18.md
@@ -15,6 +15,30 @@
 4. 코드스플리팅이라는 기술은 미리 로딩하는게 있음. 다음에 유저가 들어갈 확률이 높은 페이지를 미리 로딩함
 nuxt는 페이지 스플리팅도하면서 매끄럽게 페이지가 넘어가는 ux까지 다 신경을 쓴 프레임워크
 
+# 페이지 이동
+
+- nuxt에서는 기존의 vue-router가 아닌 nuxt-link를 사용 코드스플리팅이 적용되있음
+
+- nuxt는 폴더를 이름으로 판단함
+
+``
+    <nuxt />는 router-vue와 같다.
+``
+
+
+- layout도 여러개를 만들수있다.
+
+``
+    layout: 'layouts의 이름'
+    head() {
+        return {
+            title: '프로필'
+        }
+    }
+`
+
+- 공통되는 head는 default.vue에서 처리하면 됨
+- nuxt.config.js 는 nuxt설정하는파일
 
 
 
